Closed Bug 712959 Opened 14 years ago Closed 14 years ago

Image decoding prefs aren't reloaded when they change

Categories

(Core :: Graphics: ImageLib, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla12
Tracking Status
firefox12 --- fixed

People

(Reporter: justin.lebar+bug, Assigned: justin.lebar+bug)

References

Details

(Whiteboard: [qa?])

Attachments

(1 file)

There's no good reason for this; just an omission in the pref tracking code. I'll rewrite the code to use the new pref caches. It's much cleaner.
Blocks: 676270
Attached patch Patch v1Splinter Review
Review: joedrew!
Attachment #583825 - Flags: review?(joe)
> Review: joedrew! Hm, that didn't work quite as I'd intended. :)
Comment on attachment 583825 [details] [diff] [review] Patch v1 Review of attachment 583825 [details] [diff] [review]: ----------------------------------------------------------------- DiscardTracker.cpp | 14 ++++++- RasterImage.cpp | 39 ++++++++++++--------- RasterImage.h | 5 -- imgRequest.cpp | 94 ++++++----------------------------------------------- 4 files changed, 45 insertions(+), 107 deletions(-) Yes, this'll do. ::: image/src/RasterImage.cpp @@ +86,5 @@ > #endif > > +// Tweakable progressive decoding parameters. These are initialized to 0 here > +// because otherwise, we have to initialize them in a static initializer, which > +// makes us slower to start up. All globals are initialized to zero as they're in the .bss section, right?
Attachment #583825 - Flags: review?(joe) → review+
> All globals are initialized to zero as they're in the .bss section, right? Yes. And because the whole page comes in as zeroed, this is faster than initializing to something else.
Assignee: nobody → justin.lebar+bug
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla12
Is there something QA can do to test this?
Whiteboard: [qa?]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: