Bug 712959 - Imagelib should notice when all image.mem.* prefs change. r=joe